attempting to solve margin collapse issue with footer

--- a/css/main.css
+++ b/css/main.css
@@ -289,6 +289,8 @@ aside span {
 
 /* footer styling ----------------------------------------------------- */
 
-footer p {
+footer {
+	clear: left;
 	text-align: center;
+	margin: 10px auto;
 }
